docroot/themes/custom/transac/alshaya_hnm/sass/components/products/_products-list.scss
.c-plp {
  padding-top: 1.5rem;

  @include breakpoint($only-mobile) {
    padding-top: 0.75rem;
  }

  .region__content {
    .block-facets-summary-blockfilter-bar-promotions,
    .block-facets-summary-blockfilter-bar-plp,
    .block-facets-summary-blockfilter-bar {
      ul {
        @include breakpoint($tablet) {
          margin-bottom: 0;
          margin-top: 0.75rem;
          border-bottom: none;
        }

        li {
          a {
            font-size: 0.875rem;

            span {
              &.facet-item__value {
                background: $plp_facet_label;
                display: inline;
                vertical-align: top;
                line-height: 0.9375rem;
                text-transform: capitalize;
              }

              &.js-facet-deactivate {
                background: $plp_facet_label;
              }

              div {
                vertical-align: top;
              }
            }

            .price-type__wrapper {
              padding: 0;

              div,
              span {
                padding: 0;
              }
            }
          }

          &.clear-all {
            border: 2px solid $plp_facet_clear_border;
            line-height: 1;

            a {
              color: $plp_facet_label;
              font-family: $hnm-bold;
              text-transform: uppercase;
            }
          }
        }
      }
    }

    .filter--mobile {
      @include breakpoint($tablet) {
        top: 0;

        html[lang=ar] & {
          top: 0;
        }
      }

      .form-type-select {
        label {
          #{$left}: -3.8125rem;
        }
      }

      .c-facet__blocks__wrapper--mobile {
        .c-facet__blocks {
          padding: 0 1rem;

          .filter-menu-label {
            @include breakpoint($only-mobile) {
              margin-top: 0.875rem;

              .label {
                @include arabic-letter-spacing;

                font-family: $hnm-bold;
                font-size: 0.875rem;
                letter-spacing: 1px;
                text-transform: uppercase;
              }
            }
          }

          li.clear-all {
            border: 1px solid $plp_facet_clear_border;

            a {
              color: $plp_facet_label;
            }
          }

          .applied-filter-count {
            @include arabic-letter-spacing;

            font-family: $hnm-bold;
            color: $plp_facet_label;
            letter-spacing: 1px;
            text-transform: uppercase;
          }
        }
      }

      @include breakpoint($only-mobile) {
        .c-facet__blocks__wrapper--mobile {
          .c-facet__label {
            border: 1px solid $plp_facet_clear_border;
            border-#{$right}: none;
          }
        }
      }
    }

    .view-header.search-count {
      color: $plp_search_count;
      padding-bottom: 0.75rem;
      font-family: $hnm-regular;
      border-bottom: 1px solid $content_pagetitle_border;

      @include breakpoint($only-mobile) {
        margin-top: 0.75rem;
      }
    }
  }

  .block-system-main-block {
    @include breakpoint($tablet) {
      display: block;
      margin-top: 1.5rem;
    }
  }

  .c-page-title__description,
  .field--name-field-acq-promotion-description {
    color: $plp_category_desc;
    margin-top: 0.3125rem;
    font-family: $hnm-regular;
    line-height: 1.56;
  }

  .c-products__item {
    margin-bottom: 0.125rem;

    @include breakpoint($mobile) {
      width: 47%;
      margin-bottom: 2rem;
    }

    @include breakpoint($tablet) {
      width: 31.6%;

      &:nth-child(3n+2) {
        margin: 0 2.6%;
        margin-bottom: 2rem;
      }
    }

    @include breakpoint($upto-tablet) {
      &:nth-child(2n+1) {
        margin-#{$right}: 2.7%;
      }

      &:nth-child(2n) {
        margin-#{$left}: 2.7%;
      }
    }

    .swatches {
      margin: 0.625rem 0;
    }

    .alshaya_search_gallery {
      overflow: visible;
      max-height: none;

      .alshaya_search_mainimage {
        height: auto;
        min-height: 13.375rem;

        @include breakpoint($tablet) {
          min-height: 15.5rem;
        }

        @include breakpoint($desktop) {
          min-height: 20.125rem;
        }
      }
    }

    .alshaya_search_slider {
      opacity: 1;
      z-index: 0;
      display: block;
      transform: none;
      transition: none;
    }

    .field--name-name {
      margin-bottom: 0.25rem;
      font-family: $hnm-regular;

      a {
        color: $plp_tile_product_title;
      }
    }

    @include breakpoint($desktop) {
      &:hover {
        &::after {
          display: none;
        }

        .field--name-name {
          a {
            color: $plp_tile_product_title_hover;
            text-decoration: none;
          }
        }
      }
    }

    .out-of-stock span {
      @include arabic-letter-spacing;

      background: $plp_tile_oos_bg;
      font-family: $hnm-bold;
      letter-spacing: 1px;
      padding: 0.5rem 0.8125rem;
      text-transform: uppercase;
    }
  }

  ul.js-pager__items {
    margin-bottom: 2rem;

    a {
      color: $plp_pager_link;
      font-size: 0.875rem;
      border: 2px solid $plp_pager_link_border;
      padding: 0.5625rem 6.8rem;
      font-family: $hnm-bold;
      text-transform: uppercase;
    }
  }
}

.c-facet__blocks__wrapper--mobile {
  .c-facet__label {
    @include breakpoint($only-mobile) {
      border: 1px solid $plp_facet_border;
      border-#{$right}: none;

      @include icon(dropdown-expand, after) {
        #{$right}: -2.188rem;
        height: 2.1875rem;
        width: 2.1875rem;
        position: absolute;
        text-align: center;
        top: 0;
        font-size: 2.1875rem;
        border: 1px solid $plp_facet_border;
        border-#{$left}: none;
        background-color: transparent;
      }
    }

    @include breakpoint($tablet) {
      width: 6.3125rem;

      @include icon(dropdown-expand, after) {
        #{$right}: -2.15rem;
        height: 2.1875rem;
        width: 2.1875rem;
        position: absolute;
        text-align: center;
        top: 0;
        font-size: 2.1875rem;
        border: 1px solid $plp_facet_border;
        border-#{$left}: none;
        background-color: transparent;
      }
    }

    border: 1px solid $plp_facet_border;
    border-#{$right}: none;

    &.is-active {
      @include breakpoint($only-tablet) {
        @include icon(dropdown-collapse, after);

        border: none;
      }

      &::after {
        @include breakpoint($tablet) {
          border: none;
          background-color: $plp__label_active_bg;
        }
      }
    }
  }

  .c-facet__blocks {
    @include breakpoint($only-tablet) {
      #{$right}: -10.55rem;
    }

    @include breakpoint($only-mobile) {
      width: 100%;

      .c-facet__blocks {
        color: $plp_facet_label;
      }
    }

    width: 16.85rem;
    padding: 0 1rem;

    .filter-menu-label {
      @include u-visibility(inline-block);

      .label {
        @include arabic-letter-spacing;

        font-family: $hnm-bold;
        letter-spacing: 1px;
        text-transform: uppercase;
      }
    }

    li.clear-all {
      border: 1px solid $plp_facet_clear_border;

      a {
        color: $plp_facet_label;
      }
    }

    .applied-filter-count {
      @include arabic-letter-spacing;

      font-family: $hnm-bold;
      color: $plp_facet_label;
      letter-spacing: 1px;
      text-transform: uppercase;
    }
  }

  .region__sidebar-first {
    > .block-facets-summary {
      @include breakpoint($only-mobile) {
        width: 100%;
      }
    }
  }
}

.is-filter {
  &.view-filters {
    label {
      @include arabic-letter-spacing;

      font-size: 0.75rem;
      color: $title;
      text-transform: uppercase;
      letter-spacing: 1px;
    }

    .select2-container .select2-selection .select2-selection__rendered {
      @include arabic-letter-spacing;
    }

    .select2-container--open {
      .select2-selection__arrow {
        @include icon(dropdown-collapse, after);
      }
    }

    @include breakpoint($upto-desktop) {
      .form-type-select {
        @include select-wrapper(8.5rem);

        select {
          width: 100%;

          @include arabic-letter-spacing;

          letter-spacing: 1px;
        }
      }
    }
  }
}

.c-content__highlighted {
  .promo-banner {
    img {
      @include breakpoint($only-mobile) {
        margin-bottom: 0.75rem;
      }
    }
  }
}

.region__sidebar-first {
  > .block-facets-summary-blockfilter-bar-plp {
    @include breakpoint($only-mobile) {
      width: 100%;
    }
  }
}

.c-plp {
  .facet-item {
    input[type=checkbox] ~ label {
      &::before {
        margin-#{$left}: -0.5rem;

        @include breakpoint($desktop) {
          margin-#{$left}: -0.5rem;
        }
      }
    }
  }

  .block-facets-ajax {
    .applied-filter-count {
      @include breakpoint($only-mobile) {
        display: none;
      }
    }
  }
}

.alshaya_search_hoverimage {
  position: absolute;
  top: 0;
  opacity: 0;
  transition: opacity 0.2s ease-out;
  width: 100%;
}

